# django_bnb

./: .gitignore  README.md  dump.rdb  pyproject.toml  shell.nix
src/config/: settings.py
src/conversations/: admin.py  models.py
src/conversations/migrations/: 0001_initial.py
src/core/: models.py
src/lists/: admin.py  models.py
src/lists/migrations/: 0001_initial.py
src/reservations/: admin.py  models.py
src/reservations/migrations/: 0001_initial.py
src/reviews/: admin.py  models.py
src/reviews/migrations/: 0001_initial.py  0002_alter_review_room_alter_review_user.py
src/rooms/: admin.py  models.py
src/rooms/migrations/: 0001_initial.py  0002_alter_houserule_options_alter_roomtype_options_and_more.py  0002_initial.py  0003_alter_photo_room_alter_room_amenities_and_more.py  0003_roomtype_alter_room_country_room_room_type.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_gender.py  0003_user_currency_user_language_user_superhost_and_more.py  0004_user_birthday.py
