[project]
name = "airbnb-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Nico Audy", email = "nicoaudy1994@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "Pillow>=10.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.4",
]
